# simp

./: .gitignore  API_VARIABLES_DOCUMENTATION.md  BACKEND_INTEGRATION_GUIDE.md  PINESPHERE_ENTERPRISE_REPORT.md  PINESPHERE_ENTERPRISE_SDD.md  PINESPHERE_MASTER_DOCUMENTATION.md  PINESPHERE_PHASE2_DOCS.md  PINESPHERE_PHASE3_DOCS.md  PINESPHERE_PHASE4_DOCS.md  PINESPHERE_PHASE5_DOCS.md  doc-prompt.md  fix_mentor_constraints.py  joshua_debug.json  patch_allocation.py  patch_batch.py  patch_batch_getters.py  patch_batch_service.py  patch_batch_service2.py  patch_batch_service_syntax.py  patch_error_dialog.py  patch_error_dialog2.py  patch_error_dialog3.py  patch_error_store.py  patch_fetch_options.py  patch_frontend_api.py  patch_mapping_view.py  patch_mentor_api.py  patch_mentor_router.py  patch_router.py  patch_security_filters.py  patch_student.py  patch_student2.py  requirements.txt  simp_db_backup.dump  simp_db_backup_latest.dump  test_api.js  update_mapping.py
erp-backend/: .gitignore  AGENTS.md  README.md  alembic.ini  check_db.py  check_mods.py  check_roles.py  check_tables.py  clean_duplicate_users.py  cleanup.py  create_tndce_table.py  fix_admin.py  fix_db.py  fix_old_deleted_users.py  fix_passwords.py  fix_permissions.py  fix_routers.py  fix_security_filters.py  joshua_debug.txt  make_superadmin.py  migrate_fee.py  migrate_program_id.py  patch_db_expires.py  patch_hr_role.py  patch_mentor_router.py  patch_roles.py  pyproject.toml  query_db.py  requirements.txt  test_alloc_srctype.py  test_alloc_status.py  test_api.py  test_db.py  test_email.py  test_get_students.py  (+18 more)
(+1114 files in other folders)
